src/styles/SCSS/style.scss
@import 'global';

#background_overlay {
	z-index: -1;
	position: fixed;
	width: 100%;
	height: 100vh;
	transform: scale(1.1);

	#background {
		position: relative;
		width: 100%;
		height: 100%;
		background-color: #000;
		background-size: cover;
		background-position: center center;
	}
}

#interface {
	position: relative;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	transition: transform 0.2s;
	will-change: transform;
	text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);

	#time {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		margin-right: auto;
		margin-left: auto;
		transition: opacity 0.1s;

		.shadow {
			z-index: -1;
			position: absolute;
			overflow: hidden;
			max-width: 100%;
			width: 43em;
			opacity: 0.4;
			margin: auto;
			margin-top: 30px;
		}

		#time-container {
			#clock {
				font-family: sf_pro_displaythin;
				font-size: 6em;
			}

			#analogClock {
				border: 0.2em solid white;
				border-radius: 100%;
				height: 8em;
				position: relative;
				margin: auto auto 2em auto;
				width: 8em;
				box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);

				span {
					background: white;
					border-radius: 20px;
					bottom: 50%;
					display: block;
					width: 0.2em;
					left: 50%;
					margin-left: -0.1em;
					position: absolute;
					transform-origin: bottom center;
					box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
				}

				#hours {
					height: 30%;
				}

				#minutes {
					height: 45%;
				}

				#analogSeconds {
					height: 45%;
					width: 0.1em;
					margin-left: -0.05em;
				}

				#center {
					position: absolute;
					z-index: 5;
					width: 0.4em;
					height: 0.4em;
					top: 50%;
					left: 50%;
					transform: translate(-50%, -50%);
					background-color: white;
					border-radius: 100px;
				}
			}
		}

		#date {
			font-size: 1.5em;
		}
	}

	#main {
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		margin-right: auto;
		margin-left: auto;
		transition: opacity 0.1s;

		#weather #w_icon #widget.shown {
			opacity: 1;
		}

		.shadow {
			z-index: -1;
			position: absolute;
			width: 55em;
			max-width: 100%;
			opacity: 0.4;
			overflow: hidden;
		}

		#greetings {
			font-size: 3em;
			font-weight: inherit;
		}

		#weather #temp_max_wrap.shown {
			display: block;
		}

		@include weather();
	}

	@include searchbar();
	@include linkBlocks();

	div#linkblocks {
		padding: 0;

		.block_parent .block {
			span {
				text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
			}

			.l_icon_wrap.selected {
				border: 0.2em solid $blue;
				filter: brightness(0.75);
			}
		}

		@include hidden();
	}

	&.distract {
		#time {
			opacity: 0.8;
		}

		#credit,
		#main,
		#linkblocks {
			opacity: 0;
			transition: opacity 0.1s;
		}
	}
}

#edit_linkContainer {
	position: absolute;
	display: none;
	height: 100vh;
	width: 100%;
	transition: transform 0.2s;

	#edit_link {
		align-self: center;
		margin: auto;
		width: 300px;
		padding: 1.5em;
		z-index: 3;
		background: $settingsGrey;
		color: #333;
		border-radius: 15px;
		background: $purewhite;
		font-family: sf_pro_textregular;
		border-radius: 10px;

		> div {
			position: relative;
		}

		h4 {
			text-align: left;
			margin: 1.5em 0px 0.5em 0px;
			padding: 0px;
		}

		.empty_input {
			width: 1em;
			height: 1em;
			position: absolute;
			top: 50%;
			-webkit-transform: translate(-50%, -50%);
			-ms-transform: translate(-50%, -50%);
			transform: translate(-50%, -50%);
			right: 0.4em;

			padding: 0;
			border: none;
			cursor: pointer;
			transition: background 0.1s;

			@include hidden();

			&:active {
				filter: brightness(0.75);
				transition: all 0.1s;
			}
		}

		#l_iconfile {
			position: relative;
			width: 100%;
			display: block;
			padding: 1em 0;
			opacity: 0.8;
			font-size: 0.9em;
		}

		#e_iconfile {
			opacity: 0;
			position: absolute;
			top: 0;
			left: 25%;
			width: 50%;
			height: 4em;
			cursor: pointer;
		}

		input[type='text'],
		input[type='url'] {
			border: 0px;
			height: 1em;
			width: 100%;
			font-size: 1em;
			padding: 1em;
			box-sizing: border-box;
			border-radius: 9px;
			font-size: 0.9em;
			background: $inputGrey;
			border-radius: 8px;
			height: 2.35em;
			margin: 0.3em 0;
			padding-right: 2.5em;
			transition: background 0.2s;

			&:focus {
				background: #d3d3d5;
				transition: background 0.2s;
			}
		}

		.linkOptions {
			display: flex;
			justify-content: space-between;
			width: 100%;
			margin-top: 1.5em;

			button {
				width: 45%;
				height: 40px;
				color: $blue;
				background-color: transparent;
				border: 0px;
				border-radius: 9px;
				font-size: 0.9em;
				padding: 0.6em;
				cursor: pointer;
				transition: opacity 0.1s ease-in;

				&#e_delete {
					color: red;
				}

				&:hover {
					text-decoration: underline;
				}

				&:active {
					text-decoration: underline;
					opacity: 0.8;
				}
			}
		}

		#e_close {
			display: block;
			background-color: transparent;
			border: 0px;
			cursor: pointer;
			text-align: left;
			padding: 0;
			transition: opacity 0.1s ease-in;
			font-family: sf_pro_textregular;
			font-size: 0.9em;
			color: $blue;
			margin-bottom: 2em;

			svg {
				width: 2em;
			}

			&:hover {
				text-decoration: underline;
			}

			&:active {
				text-decoration: underline;
				opacity: 0.8;
			}
		}
	}

	#onUnsplash {
		&.shown {
			display: inline;
		}

		@include hidden();
	}

	&.shown {
		display: flex;
	}
}

#credit {
	position: fixed;
	bottom: 1em;
	left: 1em;
	text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
	transition: all 0.2s;

	a {
		color: #fff9;
		text-decoration: none;
		font-size: 0.9em;

		&:hover {
			color: #fffe;
			transition: all 0.1s;
		}
	}

	&.hidden {
		opacity: 0;
	}
}

@include popup();

#showSettings {
	position: fixed;
	bottom: 0;
	right: 0;
	padding: 0 1em 1em 0;
	z-index: 3;

	button {
		height: 3.5em;
		width: 3.5em;
		margin: 0.5em;
		padding: 0.5em;
		border: none;
		border-radius: 8px;
		background-color: transparent;
		cursor: pointer;

		&:hover {
			background: #777;
		}

		&.shown {
			background: #aaa;

			img {
				transform: rotate(45deg);
			}

			&:hover {
				background: #777;
			}
		}

		img {
			width: 27px;
			filter: drop-shadow(0px 1px 15px rgba(0, 0, 0, 0.5));
			transition: transform 0.2s;
		}
	}

	&.distract {
		opacity: 0;
		transition: opacity 0.1s;

		&:hover {
			opacity: 1;
			transition: opacity 0.1s;
		}
	}
}

#settings {
	position: fixed;
	right: -20em;
	bottom: 0;
	z-index: 2;
	width: 20em;
	height: 100vh;
	overflow-y: auto;
	background-color: $settingsGrey;
	font-family: sf_pro_textregular;
	text-shadow: none;
	text-align: left;
	color: $blackish;
	transition: transform 0.2s, background 0.1s;
	will-change: transform;

	hr {
		border: none;
		border-bottom: 1px solid $borderGrey;
		margin-top: 0.75em;
		margin-bottom: 0.75em;
		margin-right: -1.3em;
		display: block;
	}

	h1,
	h5,
	span {
		margin: 0;
	}

	h1 {
		text-align: center;
		font-size: 1em;
	}

	h5 {
		margin: 1.5em 1.3em 1em 1.3em;
		color: #6d6d72;
		text-transform: uppercase;
		font-family: sf_pro_textregular;
		font-weight: lighter;
		letter-spacing: 0.04em;
	}

	span {
		font-size: 0.9em;
	}

	.help_sentence {
		margin-top: 0.5em;
		font-size: 0.8em;
	}

	@include settingsBase();

	.title {
		background-color: #ffffff;
		border-top: 1px solid $borderGrey;
		border-bottom: 1px solid $borderGrey;
		padding: 0.5em 0;
	}

	.param {
		background-color: #ffffff;
		border-top: 1px solid $borderGrey;
		border-bottom: 1px solid $borderGrey;
		padding: 0.75em 1.3em;
		transition: background 0.1s;
	}

	.wrapper {
		display: flex;
		align-items: center;
		justify-content: space-between;
		min-height: 34px;
	}

	@include chooseBackground();

	.link_input_wrap {
		input[type='text'] {
			margin-bottom: 0.5em;
			width: calc(100% - 0.5em);
		}
	}

	#default,
	#dynamic,
	#custom {
		display: none;
	}

	#fileContainer {
		overflow: hidden;
		position: relative;
		display: block;
		width: 100%;
		border-radius: 9px;
		border: 1px solid $blue;
		padding: 0.8em;
		box-sizing: border-box;
		transition: background-color 0.1s ease-in;

		p {
			width: 100%;
			text-align: center;
			transition: color 0.05s ease-in;
			font-size: 0.9em;
			cursor: pointer;
		}

		#i_bgfile {
			display: block;
			overflow: hidden;
			min-height: 100%;
			min-width: 100%;
			opacity: 0;
			padding: 1em;
			position: absolute;
			left: 0;
			top: 0;
			cursor: pointer;
		}

		&.dragover {
			background-color: $blue;

			p {
				color: $purewhite;
			}
		}
	}

	#choose_searchengine {
		&.shown {
			display: block;
		}

		@include hidden();
	}

	#sett_city {
		flex-direction: column;

		.wrapper {
			display: inline-block;
			width: 100%;

			div {
				display: flex;
				width: 100%;
			}

			input {
				width: 50%;
				margin-right: 0.5em;
			}

			select {
				width: 50%;
				display: flex;
				align-self: center;
			}
		}

		.wrapper > span {
			margin-right: 1em;
		}

		@include hidden();
	}

	#submitReset {
		margin: auto;
	}

	select.lang {
		transition: none;
	}

	#cssEditor {
		width: calc(100% - 2.6em);
		min-height: 4em;
		resize: vertical;
		padding: 1em 1.3em;
		border: none;
	}

	.signature {
		padding: 3em 1.3em 1em 1.3em;
		text-align: left;
		color: #6d6d72;
		font-size: 13px;

		span {
			font-size: 13px;
		}

		a {
			text-decoration: none;
			color: $blue;
		}

		p {
			margin: 0;
		}

		.firstblock {
			display: flex;
			justify-content: space-between;
			margin-bottom: 1.5em;

			.socialIcons {
				width: 7em;
				display: flex;
				justify-content: space-between;

				a {
					display: flex;
					align-items: center;

					svg {
						width: 1.25em;
						fill: $blue;
					}
				}
			}
		}

		#rdv_website {
			padding-bottom: 6em;
			margin-top: 1.5em;

			> a {
				margin-top: 1em;
			}
		}
	}
}

@import 'media';

